kubernetes/components/cilium/production/kustomization/gateway-class.yaml
# Manually defined overlay because the Cilium chart does not auto-create GatewayClass.
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium Gateway Controller
